--- a/submissions/sprint2/technical documents/source code/gamekeeper_UI.html
+++ b/submissions/sprint2/technical documents/source code/gamekeeper_UI.html
@@ -13,7 +13,7 @@
             <div id="map"></div>
             <div id="sidebar">
                 <div id="mobjctvlist"></div>
-                <button id="save" onclick="submitMarkers()">submit</button>
+                <button id="save" onclick="submitMarkers()" style="height:50px; width:100px;">submit</button>
             </div>
         </div>
         <script src="gamekeeper_map.js"></script>
