--- a/submissions/sprint2/technical documents/source code/player_UI.html
+++ b/submissions/sprint2/technical documents/source code/player_UI.html
@@ -16,13 +16,15 @@
                 <div class="hamburgerLines" style="top: 24px;"></div>
                 <div class="hamburgerLines" style="top: 36px;"></div>
             </div>
-            <div id="objective">Current objective</div>
+            <button id="submit" style="height:50px;width:100px;top:50%;position:absolute;">submit</button>
+            <div id="objective"><div style="font-size:125%;color:white;font-family:'Roboto';">Current objective</div></div>
             <div id="score">Score:</div>
             <div id="marker"></div>
             <div id="hamburgermenu"></div>
         </div>
-        <script src="player_map.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcKvtKpGcA9K21EskOrTgXWSGq5VFVef0&callback=initialiseUserMap"
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcKvtKpGcA9K21EskOrTgXWSGq5VFVef0&callback=initialiseUserMap&libraries=geometry"
         async defer></script>
+        <script src="player_map.js"></script>
     </body>
 </html>
