--- a/submissions/sprint3/technical documents/source code/player_UI.html
+++ b/submissions/sprint3/technical documents/source code/player_UI.html
@@ -8,19 +8,19 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div id="hamburger" style="z-index: 100;" onclick="expandCloseMenu()">
+            <div class="hamburgerLines" style="top: 12px;"></div>
+            <div class="hamburgerLines" style="top: 24px;"></div>
+            <div class="hamburgerLines" style="top: 36px;"></div>
+        </div>
+        <div id="hamburgermenu" style="z-index: 100;"></div>
         <div id="container">
             <div id="marker"></div>
             <div id="map"></div>
-            <div id="hamburger" onclick="expandCloseMenu()">
-                <div class="hamburgerLines" style="top: 12px;"></div>
-                <div class="hamburgerLines" style="top: 24px;"></div>
-                <div class="hamburgerLines" style="top: 36px;"></div>
-            </div>
-            <div id="objective"><div style="font-size:125%;color:white;font-family:'Roboto';">Current objective</div></div>
-            <div id="clue"></div>
-            <div id="score">Score:</div>
+            <div id="objective"><div style="font-family:'Roboto';">Find location: loading...</div></div>
+            <div id="clue">Nearest clue: loading...</div>
+            <div id="score">Score: loading...</div>
             <div id="marker"></div>
-            <div id="hamburgermenu"></div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcKvtKpGcA9K21EskOrTgXWSGq5VFVef0&callback=initialiseUserMap&libraries=geometry"
