--- a/submissions/sprint3/technical documents/source code/player_UI.html
+++ b/submissions/sprint3/technical documents/source code/player_UI.html
@@ -13,7 +13,9 @@
             <div class="hamburgerLines" style="top: 24px;"></div>
             <div class="hamburgerLines" style="top: 36px;"></div>
         </div>
-        <div id="hamburgermenu" style="z-index: 100;"></div>
+        <div id="hamburgermenu" style="z-index: 100;">
+            <div style="background-color:#099EFF; height:80px; width:0px; text-align:center; vertical-align:middle; line-height:80px; position:absolute; font-family:'Roboto'; font-size:0px; font-weight:bold; color: white;">Treasure Hunt</div>
+        </div>
         <div id="container">
             <div id="marker"></div>
             <div id="map"></div>
