--- a/submissions/sprint3/technical documents/source code/gamekeeper_UI.html
+++ b/submissions/sprint3/technical documents/source code/gamekeeper_UI.html
@@ -12,8 +12,10 @@
         <div id="container">
             <div id="map"></div>
             <div id="sidebar">
-                <div id="mobjctvlist"></div>
+                <h2 style="font-family:'Roboto'; margin:10px;">Activity log</h2>
+                <div id="mobjctvlist" style="font-family:'Roboto';"></div>
                 <button id="save" onclick="submitMarkers()" style="height:50px; width:100px;">submit</button>
+                <button id="clear" onclick="clearMarkers()" style="height:50px; width:100px;">clear markers</button>
             </div>
         </div>
         <script src="gamekeeper_map.js"></script>
